--- a/app/assets/stylesheets/archive.scss
+++ b/app/assets/stylesheets/archive.scss
@@ -155,6 +155,8 @@
             width: auto;
             .card-borad_block {
                 flex-direction: column;
+                width: 95%;
+                margin: 0 auto;
             }
             .score-card {
                 width: 95%;
