--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -25,17 +25,19 @@
     .card-borad_block {
         display: flex;
         justify-content: center;
+        width: 95%;
+        margin: 0 auto;
     }
     .score-card {
-        width: 320px;
+        width: 99%;
         margin: 0 auto;
     }
     .score-card__table {
-        width: 320px;
+        width: 99%;
         display: flex;
     }
     .leader-board {
-        width: 320px;
+        width: 99%;
         margin: 0 auto;
     }
     .messageForm-block {
