--- a/app/views/scores/_score_card.html.erb
+++ b/app/views/scores/_score_card.html.erb
@@ -10,7 +10,7 @@
         <td>1H</td>
         <td id="1H-score">
         <% if @score.hole1_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d',@score.hole1_score.to_i) %>
           <% end %>
@@ -20,7 +20,7 @@
         <td>2H</td>
         <td>
         <% if @score.hole2_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole2_score.to_i) %>
           <% end %>
@@ -30,7 +30,7 @@
         <td>3H</td>
         <td>
         <% if @score.hole3_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole3_score.to_i) %>
           <% end %>
@@ -40,7 +40,7 @@
         <td>4H</td>
         <td>
         <% if @score.hole4_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole4_score.to_i) %>
           <% end %>
@@ -50,7 +50,7 @@
         <td>5H</td>
         <td>
         <% if @score.hole5_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole5_score.to_i) %>
           <% end %>
@@ -60,7 +60,7 @@
         <td>6H</td>
         <td>
         <% if @score.hole6_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole6_score.to_i) %>
           <% end %>
@@ -70,7 +70,7 @@
         <td>7H</td>
         <td>
         <% if @score.hole7_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole7_score.to_i) %>
           <% end %>
@@ -80,7 +80,7 @@
         <td>8H</td>
         <td>
         <% if @score.hole8_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole8_score.to_i) %>
           <% end %>
@@ -90,7 +90,7 @@
         <td>9H</td>
         <td>
         <% if @score.hole9_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole9_score.to_i) %>
           <% end %>
@@ -107,7 +107,7 @@
         <td>10H</td>
         <td>
         <% if @score.hole10_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole10_score.to_i) %>
           <% end %>
@@ -117,7 +117,7 @@
         <td>11H</td>
         <td>
         <% if @score.hole11_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole11_score.to_i) %>
           <% end %>
@@ -127,7 +127,7 @@
         <td>12H</td>
         <td>
         <% if @score.hole12_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole12_score.to_i) %>
           <% end %>
@@ -137,7 +137,7 @@
         <td>13H</td>
         <td>
         <% if @score.hole13_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole13_score.to_i) %>
           <% end %>
@@ -147,7 +147,7 @@
         <td>14H</td>
         <td>
         <% if @score.hole14_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole14_score.to_i) %>
           <% end %>
@@ -157,7 +157,7 @@
         <td>15H</td>
         <td>
         <% if @score.hole15_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole15_score.to_i) %>
           <% end %>
@@ -167,7 +167,7 @@
         <td>16H</td>
         <td>
         <% if @score.hole16_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole16_score.to_i) %>
           <% end %>
@@ -177,7 +177,7 @@
         <td>17H</td>
         <td>
         <% if @score.hole17_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole17_score.to_i) %>
           <% end %>
@@ -187,7 +187,7 @@
         <td>18H</td>
         <td>
         <% if @score.hole18_score == nil %>
-          <span>未プレイ</span>
+          <span></span>
           <% else %>
             <%= format('%+d', @score.hole18_score.to_i) %>
           <% end %>
