--- a/app/assets/stylesheets/golfcourses.scss
+++ b/app/assets/stylesheets/golfcourses.scss
@@ -188,8 +188,8 @@
         width: 100%;
         height: 40px;
         /*グラデーションで隠す高さ*/
-        background: -webkit-linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.9) 50%, #fff 100%);
-        background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.9) 50%, #fff 100%);
+        background: -webkit-linear-gradient(to right bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.9) 50%, #fff 100%);
+        background: linear-gradient(to right bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.9) 50%, #fff 100%);
         content: "";
     }
     
