--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,8 +127,7 @@
     body {
         font-family: 'Kosugi Maru', sans-serif;
         color: #222222;
-        background-image: image-url('shiba.jpg');
-        // background-repeat: repeat-x;
+        background-image: image-url('bg-golf.png');
         background-size: cover;
         display: flex;
         flex-flow: column;
