--- a/app/assets/stylesheets/score.scss
+++ b/app/assets/stylesheets/score.scss
@@ -20,6 +20,7 @@
         .leader-board {
             width: 320px;
             margin: 0 auto;
+            margin-left: 20px;
         }
     }
     
