bg-image-compres

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,7 +127,7 @@
     body {
         font-family: 'Kosugi Maru', sans-serif;
         color: #222222;
-        background-image: image-url('bg-golf.png');
+        background-image: image-url('bg-golf.jpg');
         background-size: cover;
         display: flex;
         flex-flow: column;
