add-message-delete-ajax

--- a/app/assets/stylesheets/score.scss
+++ b/app/assets/stylesheets/score.scss
@@ -22,6 +22,10 @@
             margin: 0 auto;
             margin-left: 20px;
         }
+        .score-block__delete_button {
+            display: block;
+            text-align: right;
+        }
     }
     
     .score-block__message {
