--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -17,7 +17,9 @@
 
 	<%# 文章 %>
 	<span class="score-block__date-content"><%= message.content %></span>
-	
+	<% if message.user.id == current_user.id %>
+		<%= link_to "削除",{controller: "messages", action: "destroy", message_id: message.id, user_id: current_user.id, score_id: @score.id }, method: :delete, remote: true, data: {confirm: "削除しますか？"}, class: "score-block__delete_button" %>
+	<% end %>
 	<%# 日付といいね %>	
 	<span class="score-block__date-like">
 		<span><%= message.created_at %></span>
