--- a/app/views/plays/edit.html.erb
+++ b/app/views/plays/edit.html.erb
@@ -3,8 +3,8 @@
   <%#= @score.send("hole#{params[:hole_number]}_score") %>
 
   <div class="play-edit__buttonGroup">
-    <button id="eagle" class="play-edit__scoreButton score_under">Eagle</button>
-    <button id="birdie" class="play-edit__scoreButton score_under">Birdie</button>
+    <button id="eagle" class="play-edit__scoreButton score_under">Eagle!!</button>
+    <button id="birdie" class="play-edit__scoreButton score_under">Birdie!</button>
     <button id="par" class="play-edit__scoreButton score_under">Par</button>
     </div>
     <%= render "form" %>
