--- a/app/views/archives/edit.html.erb
+++ b/app/views/archives/edit.html.erb
@@ -45,5 +45,5 @@
     </div>
     <%= f.submit "編集する", class: "archiveEdit-block__submit" %>
   <% end %>
-  <%= link_to "スコアカードに戻る", archives_show_path(id: params[:id]), class: "archiveEdit-block__back" %>
+  <%= link_to "スコアカードに戻る", archive_path(id: params[:id]), class: "archiveEdit-block__back" %>
 </div>
