--- a/app/views/messages/index_course.html.erb
+++ b/app/views/messages/index_course.html.erb
@@ -22,5 +22,5 @@
 		</p>
 	<% end %>
 	<%= paginate @messages %>
-	<%= link_to "メッセージ一覧にもどる", messages_index_path, class: "messageCourse-block__backIndex" %>
+	<%= link_to "メッセージ一覧にもどる", messages_path, class: "messageCourse-block__backIndex" %>
 </div>
