--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -27,7 +27,7 @@
 
         <%= f.submit "編集する", class: "form_submit_button" %>
       <% end %>  
-      <%= link_to "戻る", mypage_path %>
+      <%= link_to "戻る", mypages_path %>
     </div>
   </div>
 </div>
