--- a/app/views/golfcourses/new.html.erb
+++ b/app/views/golfcourses/new.html.erb
@@ -1,6 +1,6 @@
 <div class="golfcourse-block">
 	<h1>ラウンドするゴルフ場を選択</h1>
-	<%= form_tag(golfcourses_index_path,:method => 'get', local: true) do %>
+	<%= form_tag(new_golfcourse_path,:method => 'get', local: true) do %>
 		<%= label :search, "ゴルフ場名を検索", class: "golfcourse-block__label" %>
 		<%= text_field_tag :search, "", {class: "golfcourse-block__longform"} %>
 		<%= submit_tag 'ゴルフ場を検索', :golfcoursename => nil, class: "golfcourse-block__searchbutton" %>
