--- a/app/views/home/_top_menu.html.erb
+++ b/app/views/home/_top_menu.html.erb
@@ -1,12 +1,12 @@
 <div class="topMenu-list">
   <% if user_signed_in? && current_user.name != "ゲストプレイヤー" %>
-    <%= link_to image_tag('round.svg', class: "topMenu-image__title"), golfcourses_index_path, class: "topMenu-list__title" %>
-    <%= link_to image_tag('message.svg', class: "topMenu-image__title"), messages_index_path, class: "topMenu-list__title" %>
+    <%= link_to image_tag('round.svg', class: "topMenu-image__title"), new_golfcourse_path, class: "topMenu-list__title" %>
+    <%= link_to image_tag('message.svg', class: "topMenu-image__title"), messages_path, class: "topMenu-list__title" %>
     <%= link_to image_tag('score.svg', class: "topMenu-image__title"), '/archives?played_year=0&commit=%E6%A4%9C%E7%B4%A2', played_year: '0', commit: '検索', class: "topMenu-list__title" %>
     <%= link_to image_tag('player.svg', class: "topMenu-image__title"), user_index_path, class: "topMenu-list__title" %>
   <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
-    <%= link_to image_tag('round.svg', class: "topMenu-image__title"), golfcourses_index_path, class: "topMenu-list__title" %>
-    <%= link_to image_tag('message.svg', class: "topMenu-image__title"), messages_index_path, class: "topMenu-list__title" %>
+    <%= link_to image_tag('round.svg', class: "topMenu-image__title"), new_golfcourse_path, class: "topMenu-list__title" %>
+    <%= link_to image_tag('message.svg', class: "topMenu-image__title"), messages_path, class: "topMenu-list__title" %>
     <%= link_to image_tag('player.svg', class: "topMenu-image__title"), user_index_path, class: "topMenu-list__title" %>
   <% end %>
 </div>
