button-color-change

--- a/app/assets/stylesheets/golfcourses.scss
+++ b/app/assets/stylesheets/golfcourses.scss
@@ -33,6 +33,7 @@
             height: 40px;
             width: 150px;
             border: none;
+            background-color: lightgray;
         }
         .golfcourse-block__startbutton {
             border-radius: 25px;
