startbutton-color-change

--- a/app/assets/stylesheets/golfcourses.scss
+++ b/app/assets/stylesheets/golfcourses.scss
@@ -43,6 +43,7 @@
             display: block;
             margin: 15px auto;
             font-size: 26px;
+            background-color: lightgray;
         }
         .golfcourse-block__searchbutton:hover,
         .golfcourse-block__startbutton:hover {
