--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <%= render 'layouts/flash.scores' %>
     <div class="flex-1">
       <%= yield %>
+      <%= javascript_pack_tag "hello_vue" %>
     </div>
     <%= render 'layouts/footer' %>
     <%#= debug(params) if Rails.env.development? %>
