--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -5,6 +5,11 @@
     width: 700px;
     margin: 0 auto;
     padding: 20px;
+    .message-index-block__wrap {
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 18px;
+        padding-top: 10px;
+    }
     .message-index-block__list {
         height: 60px;
         margin-bottom: 15px;
@@ -119,7 +124,9 @@
     margin: 0 auto;
     .likeUser__ul {
         margin: 10px auto;
-        padding: 0;
+        padding: 17px;
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 18px;
     }
     .likeUser__list {
         display: flex;
