--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -7,7 +7,9 @@
     margin: 0 auto;
     .user-Search__ul {
         margin: 10px auto;
-        padding: 0;
+        padding: 17px;
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 18px;
     }
     .user-Search__list {
         display: flex;
