--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,11 @@
       
       <% end %>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
-        <%= link_to current_user.name, mypages_path, class: "dropdown-item" %>
+        <%= link_to current_user.name + "プロのMYPAGE", mypages_path, class: "dropdown-item" %>
+        <%= link_to "ラウンドする", new_golfcourse_path, class: "dropdown-item" %>
+        <%= link_to "掲示板を見る", messages_path, class: "dropdown-item" %>
+        <%= link_to "スコア解析", '/archives?played_year=0&commit=%E6%A4%9C%E7%B4%A2', played_year: '0', commit: '検索', class: "dropdown-item" %>
+        <%= link_to "プレイヤー検索", user_index_path, class: "dropdown-item" %>
         <%= link_to "ログアウト", destroy_user_session_path, method: :get, class: "dropdown-item" %><br>
       </div>
     <% elsif user_signed_in? && current_user.name == "ゲストプレイヤー" %>
