スコア関係のURLにゴルフコースID追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -127,9 +127,11 @@
     body {
         font-family: 'Kosugi Maru', sans-serif;
         color: #222222;
-        // background-image: image-url('bg-golf.jpg');
-        background-color: yellowgreen;
+        background-image: image-url('shiba_bg.jpg');
+        // background-color: yellowgreen;
         background-size: cover;
+        background-repeat: repeat;
+        background-size: 50px 50px;
         display: flex;
         flex-flow: column;
         min-height: 100vh;
